--- a/assets/css/ige.css
+++ b/assets/css/ige.css
@@ -15,130 +15,44 @@ body {
     overflow: hidden;
 }
 
-.loadingFloat {
+.loadingOverlay {
     position: absolute;
-    left: 50%;
-    top: 48%;
-    width: 80px;
-    height: 80px;
-    margin-left: -35px;
-    margin-top: -35px;
+    width: 100vw;
+    height: 100vh;
+    z-index: 1000;
+    background-color: #000;
 }
 
-.loadingLogo {
-    position: relative;
-    width: 60px;
-    height: 60px;
-    left: 10px;
-    top: 10px;
-}
-
-.loadingCircle {
-    background-color: rgba(0,0,0,0);
-    border:5px solid rgba(0,183,229,0.9);
-    opacity:.9;
-    border-right:5px solid rgba(0,0,0,0);
-    border-left:5px solid rgba(0,0,0,0);
-    border-radius:50px;
-    box-shadow: 0 0 205px #2187e7;
-    width:70px;
-    height:70px;
-    margin:0 auto;
-    position: relative;
-    top:-60px;
-    -moz-animation:spinPulse 2s infinite ease-in-out;
-    -webkit-animation:spinPulse 2s infinite linear;
-}
-.loadingCircleInner {
-    background-color: rgba(0,0,0,0);
-    border:5px solid rgba(0,183,229,0.9);
-    opacity:.9;
-    border-left:5px solid rgba(0,0,0,0);
-    border-right:5px solid rgba(0,0,0,0);
-    border-radius:50px;
-    box-shadow: 0 0 35px #2187e7;
-    width:55px;
-    height:55px;
-    margin:0 auto;
-    position:relative;
-    top:-132px;
-    left: 0px;
-    -moz-animation:spinoffPulse 1s infinite linear;
-    -webkit-animation:spinoffPulse 1s infinite linear;
-}
-
-.loadingText {
+#login{
     position: absolute;
-    top: 90px;
-    color: white;
-    font-family: Verdana, sans-serif;
-    font-size: 14px;
-    text-align: center;
-    width: 250px;
-    font-variant: small-caps;
-    -moz-animation: fadePulse 1s infinite linear;
-    -webkit-animation: fadePulse 1s infinite linear;
-    left: -85px;
+    top: calc(50% - 100px);
+    left: calc(50% - 100px);
+    height: 150px;
+    width: 150px;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 50px 25px;
+    border: 2px #333 solid;
 }
 
-#loadingProgress {
-    width: 200px;
-    height: 7px;
-    position: absolute;
-    top: 120px;
-    left: 50%;
-    margin-left: -100px;
+#login input{
+    width: calc(90% - 4px);
+    height: 30px;
+    background-color: #333;
+    border: #555 2px solid;
+    padding: 0 5%;
+    color: darkgrey;
+    margin-bottom: 15px;
 }
 
-#loadingProgressBar {
-    width: 0px;
-    height: 1px;
-    background: rgba(0, 183, 229, 0.9);
-}
-
-.loadingLink {
-    position: absolute;
-    right: 10px;
-    bottom: 10px;
-    color: white;
-    font-family: Verdana, sans-serif;
-    font-size: 12px;
-    font-variant: small-caps;
-    width: 250px;
-    text-align: right;
-    opacity: 1;
-}
-
-.loadingLink a {
-    color: #ffffff;
-    opacity: 0.7;
-}
-
-@-moz-keyframes fadePulse {
-    0% { opacity:0.5; }
-    50% { opacity:1; }
-    100% { opacity:0.5; }
-}
-@-moz-keyframes spinPulse {
-    0% { -moz-transform:rotate(160deg); opacity:0; box-shadow:0 0 1px #2187e7;}
-    50% { -moz-transform:rotate(135deg); opacity:1; }
-    100% { -moz-transform:rotate(-320deg); opacity:0; }
-}
-@-moz-keyframes spinoffPulse {
-    0% { -moz-transform:rotate(0deg); }
-    100% { -moz-transform:rotate(360deg);  }
-}
-@-webkit-keyframes fadePulse {
-    0% { opacity:0.5; }
-    50% { opacity:1; }
-    100% { opacity:0.5; }
-}
-@-webkit-keyframes spinPulse {
-    0% { -webkit-transform:rotate(160deg); opacity:0; box-shadow:0 0 1px #2187e7; }
-    50% { -webkit-transform:rotate(135deg); opacity:1;}
-    100% { -webkit-transform:rotate(-320deg); opacity:0; }
-}
-@-webkit-keyframes spinoffPulse {
-    0% { -webkit-transform:rotate(0deg); }
-    100% { -webkit-transform:rotate(360deg); }
+#login button{
+    width:  calc(60% - 4px);
+    margin-left: 20%;
+    padding: 10px 0;
+    background-color: #ccc;
+    border: none;
+    color: #333;
+    font-size: 16px;
+    cursor: pointer;
+    text-transform: uppercase;
+    border-radius: 2px;
 }
