new visuals attack upgrades

--- a/assets/css/ige.css
+++ b/assets/css/ige.css
@@ -15,6 +15,10 @@ body {
     overflow: hidden;
 }
 
+canvas {
+    background-color: #5880c8;
+}
+
 .loadingOverlay {
     position: absolute;
     width: 100vw;
